# projeto_grc

./: README.md
gr-mack_sdr_rossi/: CMakeLists.txt  MANIFEST.md
gr-mack_sdr_rossi/cmake/Modules/: mack_sdr_rossiConfig.cmake
gr-mack_sdr_rossi/docs/: README.mack_sdr_rossi
gr-mack_sdr_rossi/docs/doxygen/: Doxyfile.in
gr-mack_sdr_rossi/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-mack_sdr_rossi/examples/: BICM_ATSC.grc  TESTE.grc  bch_dec_hier.grc  bch_enc_hier.grc  block_deinter_hier.grc  block_inter_hier.grc  demapper_hier.grc  gw_deinter_hier.grc  gw_inter_hier.grc  ldpc_dec_hard_hier.grc  ldpc_dec_soft_hier.grc  ldpc_enc_hier.grc  mapper_hier.grc  parity_deinter_hier.grc  parity_inter_hier.grc  str_to_vec_teste.grc  teste_BER_BCH.grc  teste_BER_BCH_normal.grc  teste_BER_BCH_short.grc  teste_BER_Demapper.grc  teste_BER_Demapper.txt  teste_BER_LDPC_hard.grc  teste_BER_LDPC_hard.txt  teste_BER_LDPC_soft.grc  teste_BER_deinterleavers.grc  teste_entrelacador.grc  teste_new_BER_Demapper.grc  teste_new_BER_Demapper.txt  top_block.py
gr-mack_sdr_rossi/examples/arquivos/: BER_QPSK_teoria.m  ber_meter.py
gr-mack_sdr_rossi/examples/resultados/: error_validation.grc  ldpc_decoder.grc
gr-mack_sdr_rossi/examples/resultados/bch_decoder/: BCH_Decoder.grc  BCH_Decoder.py  BCH_Decoder2.py
gr-mack_sdr_rossi/examples/resultados/complete_setup/: BICM_ATSC.grc  BICM_ATSC.py  BICM_ATSC_2.py
gr-mack_sdr_rossi/examples/resultados/error_validation/: BER x EsNo QPSK.ps  PN_error_validation.py  ber_meter.py  ber_results_PN.txt
gr-mack_sdr_rossi/examples/resultados/ldpc_decoder/: LDPC_Decoder.grc  LDPC_Decoder.py  LDPC_Decoder2.py
gr-mack_sdr_rossi/examples/resultados/testes/: teste.grc  testes.py
gr-mack_sdr_rossi/examples/testes/: teste_BER_LDPC_soft.grc  teste_new_BER_Demapper.grc
gr-mack_sdr_rossi/grc/: CMakeLists.txt  mack_sdr_rossi_BCH_decoder_ATSC.xml  mack_sdr_rossi_BCH_decoder_ATSC.xml~  mack_sdr_rossi_BCH_encoder_ATSC.xml  mack_sdr_rossi_Bit_deinterleaver_ATSC.xml  mack_sdr_rossi_Bit_interleaver_ATSC.xml  mack_sdr_rossi_Block_deinterleaver_ATSC.xml  mack_sdr_rossi_Block_interleaver_ATSC.xml  mack_sdr_rossi_Demapper_ATSC.xml  mack_sdr_rossi_Group_deinterleaver_ATSC.xml  mack_sdr_rossi_Group_interleaver_ATSC.xml  mack_sdr_rossi_LDPC_decoder_ATSC.xml  mack_sdr_rossi_LDPC_decoder_hard_ATSC.xml  mack_sdr_rossi_LDPC_encoder_ATSC.xml  mack_sdr_rossi_Mapper_ATSC.xml  mack_sdr_rossi_Parity_deinterleaver_ATSC.xml  mack_sdr_rossi_Parity_interleaver_ATSC.xml  mack_sdr_rossi_str_to_vec.xml
gr-mack_sdr_rossi/include/mack_sdr_rossi/: BCH_decoder_ATSC.h  BCH_encoder_ATSC.h  Bit_deinterleaver_ATSC.h  Bit_interleaver_ATSC.h  Block_deinterleaver_ATSC.h  Block_interleaver_ATSC.h  CMakeLists.txt  Demapper_ATSC.h  Group_deinterleaver_ATSC.h  Group_interleaver_ATSC.h  LDPC_decoder_ATSC.h  LDPC_decoder_hard_ATSC.h  LDPC_encoder_ATSC.h  Mapper_ATSC.h  Parity_deinterleaver_ATSC.h  Parity_interleaver_ATSC.h  api.h  str_to_vec.h
gr-mack_sdr_rossi/lib/: BCH.cpp  BCH_decoder_ATSC_impl.cc  BCH_decoder_ATSC_impl.h  BCH_encoder_ATSC_impl.cc  BCH_encoder_ATSC_impl.h  Bit_deinterleaver_ATSC_impl.cc  Bit_deinterleaver_ATSC_impl.h  Bit_interleaver_ATSC_impl.cc  Bit_interleaver_ATSC_impl.h  Block_deinterleaver_ATSC_impl.cc  Block_deinterleaver_ATSC_impl.h  Block_interleaver_ATSC_impl.cc  Block_interleaver_ATSC_impl.h  CMakeLists.txt  Demapper_ATSC_impl.cc  Demapper_ATSC_impl.h  Group_deinterleaver_ATSC_impl.cc  Group_deinterleaver_ATSC_impl.h  Group_interleaver_ATSC_impl.cc  Group_interleaver_ATSC_impl.h  LDPC_decoder_ATSC_impl.cc  LDPC_decoder_ATSC_impl.h  LDPC_decoder_hard_ATSC_impl.cc  LDPC_decoder_hard_ATSC_impl.h  LDPC_encoder_ATSC_impl.cc  LDPC_encoder_ATSC_impl.h  Mapper_ATSC_impl.cc  Mapper_ATSC_impl.h  Parity_deinterleaver_ATSC_impl.cc  Parity_deinterleaver_ATSC_impl.h  Parity_interleaver_ATSC_impl.cc  Parity_interleaver_ATSC_impl.h  TESTE_LDPC_decoder_hard_ATSC_impl.cc  atsc_interleaver.cpp  atsc_interleaver.h  bch.cpp  bch.h  demap.cpp  demap.h  ldpc.cpp  (+6 more)
gr-mack_sdr_rossi/python/: CMakeLists.txt  __init__.py
gr-mack_sdr_rossi/swig/: CMakeLists.txt  mack_sdr_rossi_swig.i
